# security-groups-report

./: README.md  iam.json  pyproject.toml  requirements.txt
security_group_report/: main.py
