[tool.poetry]
name = "security-group-report"
version = "0.1.0"
description = ""
authors = ["Daniel Begimher <dbbegimh@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.23"
pandas = "^1.2.3"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
security-groups-report = 'security_group_report.main:main'